added gallery functionality on examples page
updated readme file to include examples url

--- a/examples.html
+++ b/examples.html
@@ -69,10 +69,10 @@
         	<div id="blockWhite" class="selected">
         		<p class="splitText" id="slide">YOUR FAVORITE SAMPLE TEXT NOW HAS A COOL ANIMATION ... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         		<div class="controls">
-	        		<div class="back"></div>
+	        		<div class="back" title="previous"></div>
 	        		<div class="arrowleft" title="undo"></div>
-	        		<div class='play'></div>
-	        		<div class="next"></div>
+	        		<div class='play' title="animate"></div>
+	        		<div class="next" title="next"></div>
         		</div>
         	</div>
         </div>
@@ -93,8 +93,9 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
         
-        <!-- <a href="https://github.com/netgfx/splittext"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
+       <a href="https://github.com/netgfx/splittext" style="position: absolute; top: 0; right: 0; ">
+       	<img style="border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
         	
-        </a> -->
+        </a>
     </body>
 </html>
