--- a/examples.html
+++ b/examples.html
@@ -46,7 +46,7 @@
         		</div>
         	</div>
         	
-        	<div id="blockGreen">
+        	<div id="blockGreen" class="blocks">
         		<p class="splitText" id="threeD">3D EXPLODE SOME WORDS OF A PARAGRAPH!</p>
         		<div class="controls">
         			<div class="back"></div>
@@ -56,7 +56,7 @@
         		</div>
         	</div>
         	
-        	<div id="blockGrey">
+        	<div id="blockGrey" class="blocks">
         		<p class="splitText" id="smoke">HIDE TEXT IN PLAIN SIGHT AND MAKE AN IMPRESSION!</p>
         		<div class="controls">
 	        		<div class="back"></div>
