--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         </section>
         
         <div style="text-align:center;width:100%;">
-           <a href="https://twitter.com/share" class="twitter-share-button" data-via="netgfx" data-size="large">Tweet</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-text="SplitText JQuery Plugin" data-size="large">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
         </div>
         
         <hr>
