refined scramble effect added blackout
added 2 new effects, that can be accessed through animation = blackout
or scramble

--- a/examples.html
+++ b/examples.html
@@ -75,6 +75,15 @@
 	        		<div class="next"></div>
         		</div>
         	</div>
+        	<div id="blockBlack" class="blocks">
+        		 <p class="splitText" id="blackout">THIS IS A VERY BRIGHT TEXT LET'S MAKE IT DARK AND SUSPICIOUS!</p>
+        		 <div class="controls">
+	        		<div class="back"></div>
+	        		<div class="arrowleft" title="undo"></div>
+	        		<div class='play'></div>
+	        		<div class="next"></div>
+        		</div>
+        	</div>
         	
         	<div id="blockWhite" class="selected">
         		<p class="splitText" id="slide">YOUR FAVORITE SAMPLE TEXT NOW HAS A COOL ANIMATION ... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
