--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           
           <ul>
             <li>type: 'lines', 'words', 'letters'</li>
-            <li>animation: 'explode', '3D', 'slide', 'smoke', 'glowOnHover', 'colorize'</li>
+            <li>animation: 'explode', '3D', 'slide', 'smoke', 'glowOnHover', 'colorize','typography3D','blackout','scramble'</li>
             <li>duration: ex. '1.0' in seconds</li>
             <li>scale: boolean</li>
             <li>colorize: ex. '#ff0000' when glowOnHover or colorize is selected</li>
