added matrix effect example and code

--- a/examples.html
+++ b/examples.html
@@ -46,6 +46,16 @@
         		</div>
         	</div>
         	
+        	<div id="blockBlack2" class="blocks">
+        		<p class="splitText" id="matrix">YOU ARE THE CHOSEN ONE, AND THIS IS A MATRIX LIKE EFFECT!</p>
+        		<div class="controls">
+	        		<div class="back"></div>
+	        		<div class="arrowleft" title="undo"></div>
+	        		<div class='play'></div>
+	        		<div class="next"></div>
+        		</div>
+        	</div>
+        	
         	<div id="blockBlue" class="blocks">
         		<p class="splitText" id="scramble">THIS IS A BORING TEXT SCRAMBLE IT!</p>
         		<div class="controls">
