--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <li>duration: ex. '1.0' in seconds</li>
             <li>scale: boolean</li>
             <li>colorize: ex. '#ff0000' when glowOnHover or colorize is selected</li>
+            <li>useCSS: boolean value (to use external css or the build-in one)</li>
           </ul>
           
           <hr/>
