--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <li>animation: 'explode', '3D', 'slide', 'smoke', 'glowOnHover', 'colorize','typography3D','blackout','scramble'</li>
             <li>duration: ex. '1.0' in seconds</li>
             <li>scale: boolean</li>
+            <li>justSplit: boolean (splitText returns only the splited text, no animation)</li>
             <li>colorize: ex. '#ff0000' when glowOnHover or colorize is selected</li>
             <li>useCSS: boolean value (to use external css or the build-in one)</li>
           </ul>
